booksonic/booksonic-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: booksonic
  name: booksonic
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: booksonic
    spec:
      containers:
      - image: linuxserver/booksonic
        name: booksonic
        ports:
        - containerPort: 4040
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: booksonic-config
        - mountPath: /audiobooks
          name: booksonic-audiobooks
        - mountPath: /podcasts
          name: booksonic-podcasts
      restartPolicy: Always
      volumes:
      - name: booksonic-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/booksonic/config"
      - name: booksonic-audiobooks
        nfs:
          server: 192.168.178.33
          path: "/volume1/audiobooks"
      - name: booksonic-podcasts
        nfs:
          server: 192.168.178.33
          path: "/volume1/podcasts"
status: {}
