booksonic/booksonic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: booksonic
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: booksonic.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: booksonic
          servicePort: 4040
